<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">MyTwitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_time_line">Time line</string>
    <string name="tweetter_profile_image">tweetter profile image</string>
    <string name="title_activity_tweet_compose">Tweet Compose</string>
    <string name="refresh">Refresh</string>
    <string name="compose">Tweet</string>
    <string name="twitter_profile_image">Tweeter Profile Image</string>
    <string name="tweet_message">What\'s happening?</string>
    <string name="cancel">Cancel</string>
    <string name="tweet">Tweet</string>
    <string name="username">Username</string>

    <item name="max_length" type="integer">140</item>

    <string name="clear">Clear</string>

    <string name="clear_button">clear button</string>

</resources>