<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_tweet_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:onClick="onClickBtnCancel"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btn_tweet_compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="onClickBtnTweet"
        android:text="@string/tweet" />

    <ImageView
        android:id="@+id/img_tweet_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/btn_tweet_cancel"
        android:contentDescription="@string/twitter_profile_image"
        android:paddingRight="5dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_tweet_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_tweet_compose"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/tv_tweet_charcount"
        android:layout_toRightOf="@id/img_tweet_profile" />

    <TextView
        android:id="@id/tv_tweet_charcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_tweet_compose"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:text="@integer/max_length" />

    <EditText
        android:id="@+id/et_tweet_compose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_tweet_profile"
        android:gravity="top"
        android:hint="@string/tweet_message"
        android:lines="4"
        android:maxLength="@integer/max_length" >
    </EditText>

    <Button
        android:id="@+id/btn_tweet_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_tweet_compose"
        android:layout_alignParentRight="true"
        android:onClick="onClickBtnClear"
        android:text="@string/clear" />

</RelativeLayout>